adjusted some spacing issue

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -148,15 +148,15 @@ body {
 .user-intro {
   grid-column: 2/ -1;
   font-family: var(--primary-font);
-  margin-top: 148px;
+  margin-top: 180px;
 
   @include smartphone {
-    margin-top: 124px;
+    margin-top: 140px;
     grid-column: var(--span-full-column);
   }
 
   @include smaller-smartphone {
-    margin-top: 96px;
+    margin-top: 80px;
   }
 
   & h1 {
@@ -210,12 +210,12 @@ body {
 
   @include smartphone {
     grid-column: var(--span-full-column);
-    margin-top: 180px;
+    margin-top: 124px;
     margin-bottom: 140px;
   }
 
   @include smaller-smartphone {
-    margin-top: 128px;
+    margin-top: 80px;
   }
 
   & > .main-hero {
@@ -255,7 +255,7 @@ body {
 }
 
 .user-button {
-  border: 2px solid var(--text-colour);
+  border: 1px solid var(--text-colour);
   height: 72px;
   width: 278px;
   font-size: 1.5rem;
